Added context menu action to add words manually

--- a/src/manifest-v2.json
+++ b/src/manifest-v2.json
@@ -13,6 +13,7 @@
 		"storage",
 		"downloads",
 		"unlimitedStorage",
+        "contextMenus",
 		"https://translate.google.com/*"
 	],
 	"browser_action": {
